Add playername tabcompleting to the root money command. (#41)
* show players in /money tab complete
update placeholders to use <> as required and [] as optional

* fix null controller exception in /money set
make ? command show player as optional argument for /money
update readme to new ? command

* space

* Update src/main/java/com/iConomy/entity/Players.java

Co-authored-by: LlmDl <LlmDlio@gmail.com>

* review

* Update src/main/java/com/iConomy/entity/Players.java

Co-authored-by: LlmDl <LlmDlio@gmail.com>

* Update src/main/java/com/iConomy/entity/Players.java

Co-authored-by: LlmDl <LlmDlio@gmail.com>

---------

Co-authored-by: LlmDl <LlmDlio@gmail.com>